# locale_ly

./: .gitmodules  Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs
core/src/parsers/: base.rs  localize_string.rs  mod.rs
